Added initial modonomicon elements

--- a/build.gradle
+++ b/build.gradle
@@ -101,6 +101,10 @@ mixin {
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
+    maven {
+        name = "KliKli Dev Repsy Maven"
+        url = "https://repo.repsy.io/mvn/klikli-dev/mods"
+    }
 
 }
 
@@ -108,6 +112,10 @@ dependencies {
     minecraft 'net.minecraftforge:forge:1.19.2-43.2.8'
 
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
+
+    compileOnly fg.deobf("com.klikli_dev:modonomicon:${modonomicon_mc_version}-${modonomicon_version}")
+    runtimeOnly fg.deobf("com.klikli_dev:modonomicon:${modonomicon_mc_version}-${modonomicon_version}")
+
 }
 
 jar {
