--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,6 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+# choose appropriate latest version from: https://repo.repsy.io/mvn/klikli-dev/mods/com/klikli_dev/modonomicon/
+modonomicon_mc_version=1.19.2
+modonomicon_version=1.9.1
