--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,43 @@
+#Project
+mod_version=1.0.0
+mod_group=club.iananderson
+mod_id=iantweaks
+mod_name=IanAndersonTweaks
+mod_author=IanAnderson
+mod_description=Various tweaks for IanAnderson's Modpack
+mod_license=All-Rights-Reserved
+
+# Common
+minecraft_version=1.20.1
+minecraft_version_range=[1.20.1,1.21)
+
+# Mappings
+mapping_channel=parchment
+mapping_version=2023.09.03-1.20.1
+
+#mapping_channel=official
+#mapping_version=1.20.1
+
+# Forge
+forge_version=47.2.1
+forge_version_range=[47,)
+loader_version_range=[47,)
+
+#Gradle
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-# choose appropriate latest version from: https://repo.repsy.io/mvn/klikli-dev/mods/com/klikli_dev/modonomicon/
-modonomicon_mc_version=1.19.2
-modonomicon_version=1.9.1
+#Modrinth
+modrinth_forge_id=
+modrinth_gameVersions=1.20.1
+
+#CurseForge
+curseforge_forge_id=
+curseforge_gameVersions=1.20.1
+
+#Forge File IDs
+
+## choose appropriate latest version from: https://repo.repsy.io/mvn/klikli-dev/mods/com/klikli_dev/modonomicon/
+modonomicon_mc_version=1.20.1
+modonomicon_version=1.37.0
+
