--- a/build.gradle
+++ b/build.gradle
@@ -99,6 +99,8 @@ dependencies {
     runtimeOnly fg.deobf("com.klikli_dev:modonomicon:${modonomicon_mc_version}-${modonomicon_version}")
 
     implementation fg.deobf("curse.maven:plasmo-voice-467028:4792697")
+
+    implementation fg.deobf("curse.maven:raised-570368:4813519")
 }
 
 jar {
