--- a/gradle.properties
+++ b/gradle.properties
@@ -28,11 +28,11 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 #Modrinth
-modrinth_forge_id=
+modrinth_forge_id=1
 modrinth_gameVersions=1.20.1
 
 #CurseForge
-curseforge_forge_id=
+curseforge_forge_id=1
 curseforge_gameVersions=1.20.1
 
 #Forge File IDs
