--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ group = mod_group
 version = mod_version
 
 base{
-    archivesName = mod_id
+    archivesName = mod_id + "-forge-" + minecraft_version
 }
 
 java {
