--- a/gradle.properties
+++ b/gradle.properties
@@ -27,12 +27,8 @@ loader_version_range=[47,)
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-#Modrinth
-modrinth_forge_id=1
-modrinth_gameVersions=1.20.1
-
 #CurseForge
-curseforge_forge_id=1
+curseforge_forge_id=942933
 curseforge_gameVersions=1.20.1
 
 #Forge File IDs
