--- a/gradle.properties
+++ b/gradle.properties
@@ -37,6 +37,8 @@ cobblemon_forge_file_id=4797451
 kotlin_for_forge_version=4.6.1
 plasmo_voice_forge_file_id=4792697
 raised_forge_file_id=4813519
+pehkui_version=3.8.0-1.20.1-forge
+
 ## choose appropriate latest version from: https://repo.repsy.io/mvn/klikli-dev/mods/com/klikli_dev/modonomicon/
 modonomicon_mc_version=1.20.1
 modonomicon_version=1.37.0
